Word wrap messages to prevent overflow

--- a/src/renderer/chat/messages/style.scss
+++ b/src/renderer/chat/messages/style.scss
@@ -12,6 +12,7 @@
   display: flex;
   padding: 6px 14px;
   border-top: 1px solid lighten($background-color, 5);
+  word-break: break-all;
 
   &:first-child {
     border-top: none;
